Fix MLBApi and change subscription key

--- a/MLB/FantasyData.MLBTests/App.config
+++ b/MLB/FantasyData.MLBTests/App.config
@@ -13,24 +13,20 @@
 
   <fantasyDataMLB defaultSubscription="Developer">
     <subscriptions>
-      <add name="Developer"
-           baseUrl="https://api.fantasydata.net/v3/mlb/"
-           primarySubscriptionKey="e53022b8e67d418281ea8333ddd6494df"
-           secondarySubscriptionKey="f9e3ba365c3944fdac1660f3e4bb7dcd4"
-           projectionPrimarySubscriptionKey="ecf2382f2b6c4b989bf54decbf18928b9"
-           projectionSecondarySubscriptionKey="5c284173d5834746b73d0f70f0b7e1ddb"
-           PlayByPlayPrimarySubscriptionKey="ec5909f118904300a98cscddf5988e5882"
-           PlayByPlaySecondarySubscriptionKey="48568c08014140fc868d12e38235b8cbc"
-           />
-      <add name="RealTime" 
-           baseUrl="https://api.fantasydata.net/v3/mlb/" 
-           primarySubscriptionKey="" 
-           secondarySubscriptionKey=""
-           projectionPrimarySubscriptionKey="" 
-           projectionSecondarySubscriptionKey=""
-           PlayByPlayPrimarySubscriptionKey=""
-           PlayByPlaySecondarySubscriptionKey=""
-           />
+			<add name="Developer" baseUrl="https://fly.sportsdata.io/v3/mlb/" 
+					 primarySubscriptionKey="4e23e4b05e9243e4b567b0299f43add8" 
+					 secondarySubscriptionKey="4e23e4b05e9243e4b567b0299f43add8" 
+					 projectionPrimarySubscriptionKey="b9192fc0feae4b068aa262a26ceb031a" 
+					 projectionSecondarySubscriptionKey="b9192fc0feae4b068aa262a26ceb031a"  
+					 PlayByPlayPrimarySubscriptionKey="ec5909f118904300a98ccdf5988e5882" 
+					 PlayByPlaySecondarySubscriptionKey="48568c08014140fc86812e38235b8cbc" />
+			<add name="RealTime" baseUrl="https://fly.sportsdata.io/v3/mlb/" 
+					 primarySubscriptionKey="4e23e4b05e9243e4b567b0299f43add8" 
+					 secondarySubscriptionKey="4e23e4b05e9243e4b567b0299f43add8" 
+					 projectionPrimarySubscriptionKey="b9192fc0feae4b068aa262a26ceb031a" 
+					 projectionSecondarySubscriptionKey="b9192fc0feae4b068aa262a26ceb031a"  
+					 PlayByPlayPrimarySubscriptionKey="ec5909f118904300a98ccdf5988e5882" 
+					 PlayByPlaySecondarySubscriptionKey="48568c08014140fc86812e38235b8cbc" />
     </subscriptions>
   </fantasyDataMLB>
   <startup>
