--- a/MLB/FantasyData.MLBTests/App.config
+++ b/MLB/FantasyData.MLBTests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="fantasyData" type="FantasyData.Configuration.FantasyDataSubscriptionRetrieverSection, FantasyData"/>
@@ -7,33 +7,17 @@
 
   <fantasyData defaultSubscription="RealTime">
     <subscriptions>
-      <add name="RealTime" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="5528632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31bc" />
+      <add name="RealTime" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="5528632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31bc"/>
     </subscriptions>
   </fantasyData>
 
   <fantasyDataMLB defaultSubscription="Developer">
     <subscriptions>
-			<add name="Developer"
-           baseUrl="https://fly.sportsdata.io/v3/mlb/"
-           primarySubscriptionKey="e53022b8e67d418281ea8333ddd6494df"
-           secondarySubscriptionKey="f9e3ba365c3944fdac1660f3e4bb7dcd4"
-           projectionPrimarySubscriptionKey="ecf2382f2b6c4b989bf54decbf18928b9"
-           projectionSecondarySubscriptionKey="5c284173d5834746b73d0f70f0b7e1ddb"
-           PlayByPlayPrimarySubscriptionKey="ec5909f118904300a98cscddf5988e5882"
-           PlayByPlaySecondarySubscriptionKey="48568c08014140fc868d12e38235b8cbc"
-           />
-			<add name="RealTime"
-           baseUrl="https://fly.sportsdata.io/v3/mlb/"
-           primarySubscriptionKey=""
-           secondarySubscriptionKey=""
-           projectionPrimarySubscriptionKey=""
-           projectionSecondarySubscriptionKey=""
-           PlayByPlayPrimarySubscriptionKey=""
-           PlayByPlaySecondarySubscriptionKey=""
-           />
+			<add name="Developer" baseUrl="https://fly.sportsdata.io/v3/mlb/" primarySubscriptionKey="e53022b8e67d418281ea8333ddd6494df" secondarySubscriptionKey="f9e3ba365c3944fdac1660f3e4bb7dcd4" projectionPrimarySubscriptionKey="ecf2382f2b6c4b989bf54decbf18928b9" projectionSecondarySubscriptionKey="5c284173d5834746b73d0f70f0b7e1ddb" PlayByPlayPrimarySubscriptionKey="ec5909f118904300a98cscddf5988e5882" PlayByPlaySecondarySubscriptionKey="48568c08014140fc868d12e38235b8cbc"/>
+			<add name="RealTime" baseUrl="https://fly.sportsdata.io/v3/mlb/" primarySubscriptionKey="" secondarySubscriptionKey="" projectionPrimarySubscriptionKey="" projectionSecondarySubscriptionKey="" PlayByPlayPrimarySubscriptionKey="" PlayByPlaySecondarySubscriptionKey=""/>
     </subscriptions>
   </fantasyDataMLB>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
 </configuration>
