--- a/Soccer/FantasyData.Soccer.Tests/App.config
+++ b/Soccer/FantasyData.Soccer.Tests/App.config
@@ -7,20 +7,19 @@
 
   <fantasyData defaultSubscription="Trial">
     <subscriptions>
-      <add name="Trial" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="5528632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31bc" />
+      <add name="Trial" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="5528632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31bc"/>
       <add name="Developer" baseUrl="http://api.nfldata.apiphany.com/developer/" primarySubscriptionKey="2be754f0c319454cb4832d0f524f596b" secondarySubscriptionKey="d2ac4b33ae794fa5ae758dae48283441"/>
       
 
-      <add name="RealTime" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="5528632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31bc" />
+      <add name="RealTime" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="5528632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31bc"/>
     </subscriptions>
   </fantasyData>
   
  <fantasyDataSoccer defaultSubscription="Developer">
     <subscriptions>
-      <add name="Developer" baseUrl="https://api.fantasydata.net/v3/soccer/" primarySubscriptionKey="97d511416a3b41049c7eec4fbe43b7b4" secondarySubscriptionKey="f8bc7f311f834edbbfcf6ff044e455bc"
-           projectionPrimarySubscriptionKey="cd93778cb97f45a1adc09ade134898da9" projectionSecondarySubscriptionKey="9582b8ef321547baabd034918e76d2f57"/>
+      <add name="Developer" baseUrl="https://api.fantasydata.net/v3/soccer/" primarySubscriptionKey="97d511416a3b41049c7eec4fbe43b7b4" secondarySubscriptionKey="f8bc7f311f834edbbfcf6ff044e455bc" projectionPrimarySubscriptionKey="cd93778cb97f45a1adc09ade134898da9" projectionSecondarySubscriptionKey="9582b8ef321547baabd034918e76d2f57"/>
       <!--<add name="RealTime" baseUrl="https://api.fantasydata.net/v3/soccer/" primarySubscriptionKey="" secondarySubscriptionKey="" 
            projectionPrimarySubscriptionKey="" projectionSecondarySubscriptionKey=""/>-->
     </subscriptions>
   </fantasyDataSoccer>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
