--- a/NBA/FantasyData.NBA.Entities/FantasyData.NBA.Entities.csproj
+++ b/NBA/FantasyData.NBA.Entities/FantasyData.NBA.Entities.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FantasyData.NBA.Entities</RootNamespace>
     <AssemblyName>FantasyData.NBA.Entities</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
