--- a/NFL/FantasyData.NFLTests/App.config
+++ b/NFL/FantasyData.NFLTests/App.config
@@ -7,10 +7,8 @@
 
   <fantasyData defaultSubscription="Developer">
     <subscriptions>
-      <add name="Developer" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="55df28632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31dfbc"
-            projectionPrimarySubscriptionKey="4ceddff148457b314e2cb77955178b328bba" projectionSecondarySubscriptionKey="53a5033b47954109af8888a057e166dfca"/>
-      <add name="RealTime" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="" secondarySubscriptionKey=""
-            projectionPrimarySubscriptionKey="" projectionSecondarySubscriptionKey=""/>
+      <add name="Developer" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="55df28632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31dfbc" projectionPrimarySubscriptionKey="4ceddff148457b314e2cb77955178b328bba" projectionSecondarySubscriptionKey="53a5033b47954109af8888a057e166dfca"/>
+      <add name="RealTime" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="" secondarySubscriptionKey="" projectionPrimarySubscriptionKey="" projectionSecondarySubscriptionKey=""/>
     </subscriptions>
   </fantasyData>
   <fantasyDataSoccer defaultSubscription="RealTime">
@@ -19,7 +17,7 @@
       <add name="Developer" baseUrl="http://api.nfldata.apiphany.com/developer/" primarySubscriptionKey="2be754f0c319454cb4832d0f524f596b" secondarySubscriptionKey="d2ac4b33ae794fa5ae758dae48283441"/>
       <add name="Weekly" baseUrl="http://api.nfldata.apiphany.com/weekly/" primarySubscriptionKey="51192ac46d0c4389a7768b6314bdf1e0" secondarySubscriptionKey="5342e8abb56d49d5bc5a5116db05b012"/>
 
-      <add name="RealTime" baseUrl="https://api.fantasydata.net/soccer/v2/" primarySubscriptionKey="7b879cbd9e67456a95ced17179bc4508" secondarySubscriptionKey="45229963ac74452eb00e0c196360c7aa" />
+      <add name="RealTime" baseUrl="https://api.fantasydata.net/soccer/v2/" primarySubscriptionKey="7b879cbd9e67456a95ced17179bc4508" secondarySubscriptionKey="45229963ac74452eb00e0c196360c7aa"/>
     </subscriptions>
   </fantasyDataSoccer>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
