--- a/NFL/FantasyData.NFLTests/App.config
+++ b/NFL/FantasyData.NFLTests/App.config
@@ -7,7 +7,7 @@
 
   <fantasyData defaultSubscription="Developer">
     <subscriptions>
-      <add name="Developer" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="55df28632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="2cdcaaba9b5e418aa6c6da19707b31dfbc" projectionPrimarySubscriptionKey="4ceddff148457b314e2cb77955178b328bba" projectionSecondarySubscriptionKey="53a5033b47954109af8888a057e166dfca"/>
+      <add name="Developer" baseUrl="https://api.sportsdata.io/v3/nfl/" primarySubscriptionKey="55df28632dbc474a0cbdd3cc310ebc2d8e" secondarySubscriptionKey="3ceca0e85249416b92c421891dc546d5" projectionPrimarySubscriptionKey="4ceddff148457b314e2cb77955178b328bba" projectionSecondarySubscriptionKey="53a5033b47954109af8888a057e166dfca"/>
       <add name="RealTime" baseUrl="https://api.fantasydata.net/v3/nfl/" primarySubscriptionKey="" secondarySubscriptionKey="" projectionPrimarySubscriptionKey="" projectionSecondarySubscriptionKey=""/>
     </subscriptions>
   </fantasyData>
